--- a/event.html
+++ b/event.html
@@ -1,30 +1,100 @@
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Perpustakaan Aura</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">\
+</head>
+  
+<body>
+ <header class="header">
+  <div class="logo-left">
+    <img src="https://cdn-icons-png.flaticon.com/512/29/29302.png" alt="Logo Buku">
+  </div>
+  <div class="center-title">PERPUSTAKAAN AURA</div>
+</header>
+
+<nav>
+  <a href="beranda.html">Beranda</a>
+  <a href="Tentang-saya.html">Tentang Saya</a>
+  <a href="Hubungi-kami.html">Hubungi Kami</a>
+  <a href="koleksi.html">Koleksi</a>
+  <a href="Tabel_Perkalian.html">Tabel Perkalian</a>
+  <a href="Formulir_kunjungan.html">Formulir Kunjungan</a>
+</nav>
+
 <section class="my-5">
   <h2 class="text-center mb-4">Event Sastra Terkini</h2>
   <div class="container">
-    <div class="row justify-content-center">
 
-      <!-- EVENT CARD -->
-      <div class="col-md-10 mb-4">
-        <a href="https://www.gramedia.id/events/read/perjamuan-setahun-joko-pinurbo-yang-terbuat-dari-rindu-pulang-dan-angkringan" target="_blank" class="text-decoration-none">
-          <div class="card flex-row shadow-sm event-card-hover">
-            <!-- Gambar -->
-            <div class="col-md-4">
-              <img src="img/poster-jokpin.jpg" alt="Poster Jokpin" class="img-fluid h-100 w-100 object-fit-cover rounded-start">
-            </div>
-            <!-- Info -->
-            <div class="col-md-8 p-3">
-              <h5 class="card-title">✨ Perjamuan Setahun Jokpin ✨</h5>
-              <ul class="list-unstyled mb-3">
-                <li>📅 27 April 2025</li>
-                <li>📍 Gramedia Sudirman Yogyakarta</li>
-                <li>🕕 18.00 – selesai</li>
-              </ul>
-              <span class="btn btn-outline-primary">Baca Selengkapnya</span>
-            </div>
+     <h2 class="text-center mb-4">Event Terkini</h2>
+  <div id="eventCarousel" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <!-- Event 1 -->
+      <div class="event-card-wrapper mb-4">
+          <a href="https://www.instagram.com/p/DJbnJIlvnWz/?igsh=bHBpeHFzaHR1emkz" target="_blank" class="event-image-container">
+          <div class="event-card d-flex flex-column flex-md-row">
+          <div class="event-image-container">
+            <img src="gambar/eventwebinar.jpg" alt="Poster Webinar" class="event-image">
           </div>
-        </a>
+          <div class="event-info p-4">
+             <h5 class="mb-3">✨ Webinar: Awareness Integrationan Management System✨</h5>
+            <p>Bersama Dr. Faisal Ikhram, S.E., M.M., CRMP, kita akan mempelajari mengania latar belakang IMS ISO 9001, ISO 14001 & ISO 45001, pengenalan & Pedoman IMS, manfaat Integrationan Management System, serta tujuan Integrationan Management System.</p>
+            <ul class="list-unstyled mb-3">
+              <li>📅 15 Mei 2025</li>
+              <li>📍 Zoom Meeting</li>
+              <li>🕕 08:45 – 11.30 WIB</li>
+            </ul>
+            <a href="https://www.instagram.com/p/DJbnJIlvnWz/?igsh=bHBpeHFzaHR1emkz" class="btn custom-btn" target="_blank">Baca Selengkapnya</a>
+      
+          </div>
+        </div>
       </div>
 
+    <!-- Event 2 -->
+    <div class="event-card-wrapper mb-4">
+      <a href="https://www.gramedia.id/events/read/perjamuan-setahun-joko-pinurbo-yang-terbuat-dari-rindu-pulang-dan-angkringan" target="_blank" class="event-card-link">
+        <div class="event-card d-flex flex-column flex-md-row">
+          <div class="event-image-container">
+            <img src="gambar/eventjoko.png" alt="Poster Jokpin" class="event-image">
+          </div>
+          <div class="event-info p-4">
+            <h5 class="mb-3">✨ Perjamuan Setahun Jokpin ✨</h5>
+            <p>Tepat setahun setelah kepergiannya, mari kita rayakan warisan puisi Joko Pinurbo dalam sebuah perjamuan yang penuh kenangan. 
+                 Kita akan menikmati pertunjukan, pembacaan puisi, peresmian patung Jokpin Dunadi, dan peluncuran edisi khusus buku Celana bersama keluarga mendiang, Forum Aktor Yogya, dan pecinta puisi.</p>
+            <ul class="list-unstyled mb-3">
+              <li>📅 27 April 2025</li>
+              <li>📍 Gramedia Sudirman Yogyakarta</li>
+              <li>🕕 18.00 – selesai</li>
+            </ul>
+            <span class="btn">Baca Selengkapnya</span>
+          </div>
+        </div>
+      </a>
     </div>
+
+    <!-- Event 3 -->
+    <div class="event-card-wrapper mb-4">
+      <a href="https://www.gramedia.id/events/read/panggung-puisi-keliling-ternyatatanpamu-bersama-natasha-rizky-surabaya" target="_blank" class="event-card-link">
+        <div class="event-card d-flex flex-column flex-md-row">
+          <div class="event-image-container">
+            <img src="eventnatasya.png" alt="Poster Puisi Keliling" class="event-image">
+          </div>
+          <div class="event-info p-4">
+            <h5 class="mb-3">✨ Panggung Puisi Keliling #TernyataTanpamu ✨</h5>
+            <ul class="list-unstyled mb-3">
+              <li>📅 26 April 2025</li>
+              <li>📍 Gramedia Tunjungan Plaza Surabaya</li>
+              <li>🕕 15.00 – 17.00 WIB</li>
+            </ul>
+            <span class="btn">Baca Selengkapnya</span>
+          </div>
+        </div>
+      </a>
+    </div>
+
   </div>
 </section>
