--- a/beranda.html
+++ b/beranda.html
@@ -123,7 +123,7 @@
 
   <!-- Tombol Lihat Event Lainnya -->
   <div class="text-center mt-4">
-    <a href="event.html" class="btn custom-btn" target="_blank">Lihat Event Lainnya</a>
+    <a href="event.html" class="btn custom-btn">Lihat Event Lainnya</a>
   </div>
 </section>
 
