--- a/event.html
+++ b/event.html
@@ -90,3 +90,26 @@
 
   </div>
 </section>
+
+   <footer>
+        &copy; 2025 Perpustakaan Aura
+    </footer>
+   
+    <!-- Default Statcounter code for Perpustakaan Aura -->
+    <script type="text/javascript">
+    var sc_project=13116289; 
+    var sc_invisible=0; 
+    var sc_security="cb7e7e70"; 
+    var scJsHost = "https://";
+    document.write("<sc"+"ript type='text/javascript' src='" + scJsHost+
+    "statcounter.com/counter/counter.js'></"+"script>");
+    </script>
+    <noscript><div class="statcounter"><a title="hit counter"
+    href="https://statcounter.com/" target="_blank"><img class="statcounter"
+    src="https://c.statcounter.com/13116289/0/cb7e7e70/0/" alt="hit counter"
+    referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+    <!-- End of Statcounter Code -->
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
