--- a/event.html
+++ b/event.html
@@ -30,14 +30,16 @@
   <h2 class="text-center mb-4">Semua Event</h2>
   <div class="container">
 
-        <div class="event-card d-flex flex-column flex-md-row align-items-stretch">
-          <a href="https://www.instagram.com/p/DJbnJIlvnWz/?igsh=bHBpeHFzaHR1emkz" target="_blank" class="event-image-container">
-            <img src="gambar/eventwebinar.jpg" alt="Poster Webinar" class="event-image">
+        <div class="event-card-wrapper mb-4">
+          <a href="https://www.instagram.com/p/DJbnJIlvnWz/?igsh=bHBpeHFzaHR1emkz" target="_blank" class="event-card-link">
+            <div class="event-card d-flex flex-column flex-md-row">
+            <div class="event-image-container">
+              <img src="gambar/eventwebinar.jpg" alt="Poster Webinar" class="event-image">
           </a>
           <div class="event-info p-4">
-            <h5>✨ Webinar: Awareness Integrationan Management System ✨</h5>
+           <h5 class="mb-3">✨ Webinar: Awareness Integrationan Management System ✨</h5>
             <p>Bersama Dr. Faisal Ikhram, S.E., M.M., CRMP, kita akan mempelajari mengania latar belakang IMS ISO 9001, ISO 14001 & ISO 45001, pengenalan & Pedoman IMS, manfaat Integrationan Management System, serta tujuan Integrationan Management System.</p>
-            <ul>
+            <h5 class="mb-3">
               <li>📅 15 Mei 2025</li>
               <li>📍 Zoom Meeting</li>
               <li>🕕 08:45 – 11.30 WIB</li>
@@ -50,15 +52,17 @@
 
 <!-- Event 2 -->
     
-        <div class="event-card d-flex flex-column flex-md-row align-items-stretch">
-          <a href="https://www.gramedia.id/events/read/perjamuan-setahun-joko-pinurbo-yang-terbuat-dari-rindu-pulang-dan-angkringan" target="_blank" class="event-image-container">
+       <div class="event-card-wrapper mb-4">
+          <a href="https://www.gramedia.id/events/read/perjamuan-setahun-joko-pinurbo-yang-terbuat-dari-rindu-pulang-dan-angkringan" target="_blank" class="event-card-link">
+            <div class="event-card d-flex flex-column flex-md-row">
+               <div class="event-image-container">
             <img src="gambar/eventjoko.png" alt="Poster Jokpin" class="event-image">
           </a>
           <div class="event-info p-4">
             <h5>✨ Perjamuan Setahun Jokpin ✨</h5>
             <p>Tepat setahun setelah kepergiannya, mari kita rayakan warisan puisi Joko Pinurbo dalam sebuah perjamuan yang penuh kenangan. 
                  Kita akan menikmati pertunjukan, pembacaan puisi, peresmian patung Jokpin Dunadi, dan peluncuran edisi khusus buku Celana bersama keluarga mendiang, Forum Aktor Yogya, dan pecinta puisi.</p>
-            <ul>
+            <ul class="list-unstyled mb-3">
               <li>📅 27 April 2025</li>
               <li>📍 Gramedia Sudirman Yogyakarta</li>
               <li>🕕 18.00 – selesai</li>
