--- a/beranda.html
+++ b/beranda.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Perpustakaan Aura</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">\
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
   
 <body>
@@ -17,13 +17,35 @@
   <div class="center-title">PERPUSTAKAAN AURA</div>
 </header>
 
-<nav>
-  <a href="beranda.html">Beranda</a>
-  <a href="Tentang-saya.html">Tentang Saya</a>
-  <a href="Hubungi-kami.html">Hubungi Kami</a>
-  <a href="koleksi.html">Koleksi</a>
-  <a href="Tabel_Perkalian.html">Tabel Perkalian</a>
-  <a href="Formulir_kunjungan.html">Formulir Kunjungan</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Perpustakaan Aura</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="beranda.html">Beranda</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="Tentang-saya.html">Tentang Saya</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="Hubungi-kami.html">Hubungi Kami</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="koleksi.html">Koleksi</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="Tabel_Perkalian.html">Tabel Perkalian</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="Formulir_kunjungan.html">Formulir Kunjungan</a>
+        </li>
+      </ul>
+    </div>
+  </div>
 </nav>
   
     <div class="container">
