--- a/beranda.html
+++ b/beranda.html
@@ -17,36 +17,34 @@
   <div class="center-title">PERPUSTAKAAN AURA</div>
 </header>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Perpustakaan Aura</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="beranda.html">Beranda</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="Tentang-saya.html">Tentang Saya</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="Hubungi-kami.html">Hubungi Kami</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="koleksi.html">Koleksi</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="Tabel_Perkalian.html">Tabel Perkalian</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="Formulir_kunjungan.html">Formulir Kunjungan</a>
-        </li>
-      </ul>
-    </div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span> <!-- Hamburger menu icon -->
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="beranda.html">Beranda</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="Tentang-saya.html">Tentang Saya</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="Hubungi-kami.html">Hubungi Kami</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="koleksi.html">Koleksi</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="Tabel_Perkalian.html">Tabel Perkalian</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="Formulir_kunjungan.html">Formulir Kunjungan</a>
+      </li>
+    </ul>
   </div>
 </nav>
+
   
     <div class="container">
         <section>
