--- a/beranda.html
+++ b/beranda.html
@@ -22,7 +22,7 @@
     <span class="navbar-toggler-icon"></span> <!-- Hamburger menu icon -->
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
+    <ul class="navbar-nav mx-auto">
       <li class="nav-item">
         <a class="nav-link" href="beranda.html">Beranda</a>
       </li>
@@ -44,7 +44,6 @@
     </ul>
   </div>
 </nav>
-
   
     <div class="container">
         <section>
