--- a/beranda.html
+++ b/beranda.html
@@ -17,7 +17,7 @@
   <div class="center-title">PERPUSTAKAAN AURA</div>
 </header>
   
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span> <!-- Hamburger menu icon -->
   </button>
@@ -44,7 +44,7 @@
     </ul>
   </div>
 </nav>
-
+  
     <div class="container">
         <section>
             <h2>Selamat Datang di Perpustakaan Aura!</h2>
