--- a/Tentang-saya.html
+++ b/Tentang-saya.html
@@ -18,7 +18,7 @@
 </header>
 
 <nav>
-  <a href="index.html">Beranda</a>
+  <a href="beranda.html">Beranda</a>
   <a href="Tentang-saya.html">Tentang Saya</a>
   <a href="Hubungi-kami.html">Hubungi Kami</a>
   <a href="koleksi.html">Koleksi</a>
