--- a/koleksi.html
+++ b/koleksi.html
@@ -17,31 +17,15 @@
   <div class="center-title">PERPUSTAKAAN AURA</div>
 </header>
 
-<nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
-  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span> <!-- Hamburger menu icon -->
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav mx-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="beranda.html">Beranda</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="Tentang-saya.html">Tentang Saya</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="Hubungi-kami.html">Hubungi Kami</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="koleksi.html">Koleksi</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="Tabel_Perkalian.html">Tabel Perkalian</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="Formulir_kunjungan.html">Formulir Kunjungan</a>
-      </li>
-    </ul>
+<nav class="main-nav">
+  <button class="burger" onclick="toggleMenu()">☰</button>
+  <div class="menu-links" id="menuLinks">
+    <a href="beranda.html">Beranda</a>
+    <a href="Tentang-saya.html">Tentang Saya</a>
+    <a href="Hubungi-kami.html">Hubungi Kami</a>
+    <a href="koleksi.html">Koleksi</a>
+    <a href="Tabel_Perkalian.html">Tabel Perkalian</a>
+    <a href="Formulir_kunjungan.html">Formulir Kunjungan</a>
   </div>
 </nav>
 
