--- a/koleksi.html
+++ b/koleksi.html
@@ -17,16 +17,21 @@
   <div class="center-title">PERPUSTAKAAN AURA</div>
 </header>
 
-<nav class="main-nav">
-  <button class="burger" onclick="toggleMenu()">☰</button>
-  <div class="menu-links" id="menuLinks">
-    <a href="beranda.html">Beranda</a>
-    <a href="Tentang-saya.html">Tentang Saya</a>
-    <a href="Hubungi-kami.html">Hubungi Kami</a>
-    <a href="koleksi.html">Koleksi</a>
-    <a href="Tabel_Perkalian.html">Tabel Perkalian</a>
-    <a href="Formulir_kunjungan.html">Formulir Kunjungan</a>
+<header class="header">
+  <div class="logo-left">
+    <img src="https://cdn-icons-png.flaticon.com/512/29/29302.png" alt="Logo Buku">
   </div>
+  <div class="center-title">PERPUSTAKAAN AURA</div>
+  <button class="burger" onclick="toggleMenu()">☰</button>
+</header>
+
+<nav id="menuLinks" class="menu-links">
+  <a href="beranda.html">Beranda</a>
+  <a href="Tentang-saya.html">Tentang Saya</a>
+  <a href="Hubungi-kami.html">Hubungi Kami</a>
+  <a href="koleksi.html">Koleksi</a>
+  <a href="Tabel_Perkalian.html">Tabel Perkalian</a>
+  <a href="Formulir_kunjungan.html">Formulir Kunjungan</a>
 </nav>
 
       <div class="container">
@@ -92,7 +97,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
+<script>
   function toggleMenu() {
     const menu = document.getElementById("menuLinks");
     menu.classList.toggle("show");
