--- a/koleksi.html
+++ b/koleksi.html
@@ -25,7 +25,10 @@
   <button class="burger" onclick="toggleMenu()">☰</button>
 </header>
 
-<nav id="menuLinks" class="menu-links">
+ <button class="burger" onclick="toggleMenu()">☰</button>
+</header>
+
+<nav class="main-nav menu-links">
   <a href="beranda.html">Beranda</a>
   <a href="Tentang-saya.html">Tentang Saya</a>
   <a href="Hubungi-kami.html">Hubungi Kami</a>
@@ -99,8 +102,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script>
   function toggleMenu() {
-    const menu = document.getElementById("menuLinks");
-    menu.classList.toggle("show");
+    document.querySelector('.menu-links').classList.toggle('show');
   }
 </script>
 
