--- a/beranda.html
+++ b/beranda.html
@@ -151,5 +151,10 @@
     <!-- End of Statcounter Code -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+  function toggleMenu() {
+    document.querySelector('.menu-links').classList.toggle('show');
+  }
+</script>
 </body>
 </html>
