--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -7,23 +7,26 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
- 
+
 </head>
 <body>
- <header class="header">
+<header class="header">
   <div class="logo-left">
     <img src="https://cdn-icons-png.flaticon.com/512/29/29302.png" alt="Logo Buku">
   </div>
+
   <div class="center-title">PERPUSTAKAAN AURA</div>
+
+  <button class="burger" onclick="toggleMenu()">☰</button>
 </header>
 
-<nav>
+<nav class="main-nav menu-links">
   <a href="beranda.html">Beranda</a>
   <a href="Tentang-saya.html">Tentang Saya</a>
   <a href="Hubungi-kami.html">Hubungi Kami</a>
   <a href="koleksi.html">Koleksi</a>
-  <a href="tabel_perkalian.html">Tabel Perkalian</a>
-  <a href="formulir-kunjungan.html">Formulir Kunjungan</a>
+  <a href="Tabel_Perkalian.html">Tabel Perkalian</a>
+  <a href="Formulir_kunjungan.html">Formulir Kunjungan</a>
 </nav>
 
     <div class="container">
@@ -56,5 +59,10 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+  function toggleMenu() {
+    document.querySelector('.menu-links').classList.toggle('show');
+  }
+</script>
 </body>
 </html>
