--- a/Tentang-saya.html
+++ b/Tentang-saya.html
@@ -10,39 +10,23 @@
 
 </head>
 <body>
- <header class="header">
+<header class="header">
   <div class="logo-left">
     <img src="https://cdn-icons-png.flaticon.com/512/29/29302.png" alt="Logo Buku">
   </div>
+
   <div class="center-title">PERPUSTAKAAN AURA</div>
+
+  <button class="burger" onclick="toggleMenu()">☰</button>
 </header>
-  
-<nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
-  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span> <!-- Hamburger menu icon -->
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav mx-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="beranda.html">Beranda</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="Tentang-saya.html">Tentang Saya</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="Hubungi-kami.html">Hubungi Kami</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="koleksi.html">Koleksi</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="Tabel_Perkalian.html">Tabel Perkalian</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="Formulir_kunjungan.html">Formulir Kunjungan</a>
-      </li>
-    </ul>
-  </div>
+
+<nav class="main-nav menu-links">
+  <a href="beranda.html">Beranda</a>
+  <a href="Tentang-saya.html">Tentang Saya</a>
+  <a href="Hubungi-kami.html">Hubungi Kami</a>
+  <a href="koleksi.html">Koleksi</a>
+  <a href="Tabel_Perkalian.html">Tabel Perkalian</a>
+  <a href="Formulir_kunjungan.html">Formulir Kunjungan</a>
 </nav>
 
 <div class="container">
@@ -82,5 +66,10 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+  function toggleMenu() {
+    document.querySelector('.menu-links').classList.toggle('show');
+  }
+</script>
 </body>
 </html>
