--- a/beranda.html
+++ b/beranda.html
@@ -151,15 +151,7 @@
     <!-- End of Statcounter Code -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
-  function toggleMenu() {
-    document.querySelector('.menu-links').classList.toggle('show');
-  }
-</script>
-<script>
-  const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]');
-  const tooltipList = [...tooltipTriggerList].map(el => new bootstrap.Tooltip(el));
-</script>
+ <script src="script.js"></script>
 
 </body>
 </html>
