--- a/koleksi.html
+++ b/koleksi.html
@@ -22,7 +22,7 @@
 
 <nav class="main-nav menu-links">
   <a href="beranda.html">Beranda</a>
-  <a href="Tentang-saya.html">Tentang Saya</a>
+ <a class="nav-link" href="Tentang-saya.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Pelajari lebih lanjut tentang saya di sini">Tentang Saya</a>
   <a href="Hubungi-kami.html">Hubungi Kami</a>
   <a href="koleksi.html">Koleksi</a>
   <a href="Tabel_Perkalian.html">Tabel Perkalian</a>
@@ -92,11 +92,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-  function toggleMenu() {
-    document.querySelector('.menu-links').classList.toggle('show');
-  }
-</script>
+<script src="script.js"></script>
 
 </body>
 </html>
