--- a/Tentang-saya.html
+++ b/Tentang-saya.html
@@ -22,7 +22,7 @@
 
 <nav class="main-nav menu-links">
   <a href="beranda.html">Beranda</a>
-  <a href="Tentang-saya.html">Tentang Saya</a>
+ <a class="nav-link" href="Tentang-saya.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Pelajari lebih lanjut tentang saya di sini">Tentang Saya</a>
   <a href="Hubungi-kami.html">Hubungi Kami</a>
   <a href="koleksi.html">Koleksi</a>
   <a href="Tabel_Perkalian.html">Tabel Perkalian</a>
