--- a/Tentang-saya.html
+++ b/Tentang-saya.html
@@ -66,10 +66,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
-  function toggleMenu() {
-    document.querySelector('.menu-links').classList.toggle('show');
-  }
-</script>
+<script src="script.js"></script>
 </body>
 </html>
