--- a/Tentang-saya.html
+++ b/Tentang-saya.html
@@ -37,10 +37,19 @@
             <th>Informasi</th>
             <th>Detail</th>
         </tr>
-        <tr>
-            <td>Nama</td>
-            <td>Aura Adisty Lesmana</td>
-        </tr>
+        <table class="table table-bordered">
+  <tr>
+    <th>Nama</th>
+    <td>
+      <span 
+        data-bs-toggle="tooltip" 
+        data-bs-placement="right" 
+        title="Penulis buku, pengelola website perpustakaan, dan operator SLiMS.">
+        Aura Permata
+      </span>
+    </td>
+  </tr>
+</table>
         <tr>
             <td>NIM</td>
             <td>220709067</td>
