--- a/Tentang-saya.html
+++ b/Tentang-saya.html
@@ -39,7 +39,7 @@
         </tr>
   <tr>
     <td>Nama</td>
-    <td>Aura Adisty Lesmana</td>
+    <td>data-bs-toggle="tooltip" data-bs-placement="bottom" title="Informasi tentang pengelola perpustakaan">Aura Adisty Lesmana</td>
   </tr>
         <tr>
             <td>NIM</td>
