--- a/Tentang-saya.html
+++ b/Tentang-saya.html
@@ -39,7 +39,11 @@
         </tr>
   <tr>
     <td>Nama</td>
-    <td>data-bs-toggle="tooltip" data-bs-placement="bottom" title="Informasi tentang pengelola perpustakaan">Aura Adisty Lesmana</td>
+    <td>
+  <span data-bs-toggle="tooltip" data-bs-placement="right" title="Mahasiswa Perpustakaan dan Sains Informasi">
+    Aura Adisty Lesmana
+  </span>
+</td>
   </tr>
         <tr>
             <td>NIM</td>
