--- a/Tentang-saya.html
+++ b/Tentang-saya.html
@@ -39,11 +39,9 @@
         </tr>
   <tr>
     <td>Nama</td>
-    <td>
-  <span data-bs-toggle="tooltip" data-bs-placement="right" title="Mahasiswa Perpustakaan dan Sains Informasi">
+  <td data-bs-toggle="tooltip" data-bs-placement="right" title="Mahasiswa Perpustakaan dan Sains Informasi">
     Aura Adisty Lesmana
-  </span>
-</td>
+  </td>
   </tr>
         <tr>
             <td>NIM</td>
