--- a/Tentang-saya.html
+++ b/Tentang-saya.html
@@ -39,7 +39,7 @@
         </tr>
   <tr>
     <td>Nama</td>
-  <td data-bs-toggle="tooltip" data-bs-placement="right" title="Mahasiswa Perpustakaan dan Sains Informasi">
+  <td data-bs-toggle="tooltip" data-bs-placement="right" title="Perempuan kelahiran Medan pada 10 November 2003.">
     Aura Adisty Lesmana
   </td>
   </tr>
