--- a/Tentang-saya.html
+++ b/Tentang-saya.html
@@ -39,7 +39,7 @@
         </tr>
   <tr>
     <td>Nama</td>
-  <td data-bs-toggle="tooltip" data-bs-placement="right" title="Perempuan kelahiran Medan pada 10 November 2003.">
+  <td data-bs-toggle="tooltip" data-bs-placement="right" title="Lahir di Medan pada 10 November 2003.">
     Aura Adisty Lesmana
   </td>
   </tr>
@@ -49,8 +49,10 @@
         </tr>
         <tr>
             <td>Program Studi</td>
-            <td>Perpustakaan dan Sains Informasi</td>
-        </tr>
+             <td data-bs-toggle="tooltip" data-bs-placement="right" title="Bidang yang mempelajari pengelolaan informasi, teknologi perpustakaan, dan layanan pengguna.">
+    Perpustakaan dan Sains Informasi
+  </td>
+        </tr
         <tr>
             <td>Fakultas</td>
             <td>Ilmu Budaya</td>
