--- a/Tentang-saya.html
+++ b/Tentang-saya.html
@@ -7,6 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 </head>
 <body>
@@ -65,6 +66,19 @@
     <br>
     <a href="index.html">Kembali ke Beranda</a>
 </div>
+
+<div class="link-section">
+  <a href="file-cv-anda.pdf" target="_blank" download>
+    <i class="fas fa-file-download"></i> Lihat/Unduh CV
+  </a>
+  <a href="https://www.linkedin.com/in/aura-adisty-lesmana-29b80b23b/" target="_blank">
+    <i class="fab fa-linkedin"></i> LinkedIn
+  </a>
+  <a href="https://www.instagram.com/au_rajin?igsh=cG1xeXpnZmt6MTc1" target="_blank">
+    <i class="fab fa-instagram"></i> Instagram
+  </a>
+</div>
+  
  <footer>
         &copy; 2025 Perpustakaan Aura
     </footer>
