--- a/Tentang-saya.html
+++ b/Tentang-saya.html
@@ -63,9 +63,6 @@
             <td>Universitas Sumatera Utara</td>
         </tr>
     </table>
-    <br>
-    <a href="index.html">Kembali ke Beranda</a>
-</div>
 
 <div class="link-section">
   <a href="file-cv-anda.pdf" target="_blank" download>
@@ -77,6 +74,10 @@
   <a href="https://www.instagram.com/au_rajin?igsh=cG1xeXpnZmt6MTc1" target="_blank">
     <i class="fab fa-instagram"></i> Instagram
   </a>
+</div>
+  
+   <div style="margin-top: 20px;">
+  <a href="beranda.html">Kembali ke Beranda</a>
 </div>
   
  <footer>
