--- a/Tentang-saya.html
+++ b/Tentang-saya.html
@@ -65,7 +65,7 @@
     </table>
 
 <div class="link-section">
-  <a href="file-cv-anda.pdf" target="_blank" download>
+  <a href="dokumen/CV Aura NEW.pdf" target="_blank" download>
     <i class="fas fa-file-download"></i> Lihat/Unduh CV
   </a>
   <a href="https://www.linkedin.com/in/aura-adisty-lesmana-29b80b23b/" target="_blank">
@@ -80,9 +80,9 @@
   <a href="beranda.html">Kembali ke Beranda</a>
 </div>
   
- <footer>
-        &copy; 2025 Perpustakaan Aura
-    </footer>
+ 
+  
+  <footer>&copy; 2025 Perpustakaan Aura</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="script.js"></script>
