--- a/Tentang-saya.html
+++ b/Tentang-saya.html
@@ -64,17 +64,12 @@
         </tr>
     </table>
 
-<div class="link-section">
-  <a href="dokumen/CV Aura NEW.pdf" target="_blank" download>
-    <i class="fas fa-file-download"></i> Lihat/Unduh CV
-  </a>
-  <a href="https://www.linkedin.com/in/aura-adisty-lesmana-29b80b23b/" target="_blank">
-    <i class="fab fa-linkedin"></i> LinkedIn
-  </a>
-  <a href="https://www.instagram.com/au_rajin?igsh=cG1xeXpnZmt6MTc1" target="_blank">
-    <i class="fab fa-instagram"></i> Instagram
-  </a>
+<div class="link-box-container">
+  <a href="dokumen/CV Aura NEW.pdf" class="link-box" download>📄 Lihat CV</a>
+  <a href="https://www.linkedin.com/in/aura-adisty-lesmana-29b80b23b/" class="link-box" target="_blank">💼 LinkedIn</a>
+  <a href="https://www.instagram.com/au_rajin?igsh=cG1xeXpnZmt6MTc1" target="_blank">📷 Instagram</a>
 </div>
+
   
    <div style="margin-top: 20px;">
   <a href="beranda.html">Kembali ke Beranda</a>
