--- a/Tentang-saya.html
+++ b/Tentang-saya.html
@@ -67,13 +67,12 @@
 <div class="link-box-container">
   <a href="dokumen/CV Aura NEW.pdf" class="link-box" download>📄 Lihat CV</a>
   <a href="https://www.linkedin.com/in/aura-adisty-lesmana-29b80b23b/" class="link-box" target="_blank">💼 LinkedIn</a>
-  <a href="https://www.instagram.com/au_rajin?igsh=cG1xeXpnZmt6MTc1" target="_blank">📷 Instagram</a>
+  <a href="https://www.instagram.com/au_rajin?igsh=cG1xeXpnZmt6MTc1" class="link-box" target="_blank">📷 Instagram</a>
 </div>
 
   
    <div style="margin-top: 20px;">
-  <a href="beranda.html">Kembali ke Beranda</a>
-</div>
+  <a href="beranda.html">Kembali ke Beranda</a></div>
   
  
   
