--- a/Tentang-saya.html
+++ b/Tentang-saya.html
@@ -65,7 +65,7 @@
     </table>
 
 <div class="link-box-container">
-  <a href="dokumen/CV Aura NEW.pdf" class="link-box" download>📄 Lihat CV</a>
+  <a href="dokumen/CV Aura NEW.pdf" class="link-box" target="_blank">📄 Lihat CV</a>
   <a href="https://www.linkedin.com/in/aura-adisty-lesmana-29b80b23b/" class="link-box" target="_blank">💼 LinkedIn</a>
   <a href="https://www.instagram.com/au_rajin?igsh=cG1xeXpnZmt6MTc1" class="link-box" target="_blank">📷 Instagram</a>
 </div>
@@ -73,7 +73,7 @@
   
    <div style="margin-top: 20px;">
   <a href="beranda.html">Kembali ke Beranda</a></div>
-  
+</div>
  
   
   <footer>&copy; 2025 Perpustakaan Aura</footer>
