--- a/Tentang-saya.html
+++ b/Tentang-saya.html
@@ -64,6 +64,7 @@
         </tr>
     </table>
 
+  <p>Anda dapat mengunjungi tautan di bawah ini untuk mengetahui lebih banyak tentang saya</p>
 <div class="link-box-container">
   <a href="dokumen/CV Aura NEW.pdf" class="link-box" target="_blank">📄 Lihat CV</a>
   <a href="https://www.linkedin.com/in/aura-adisty-lesmana-29b80b23b/" class="link-box" target="_blank">💼 LinkedIn</a>
