--- a/beranda.html
+++ b/beranda.html
@@ -40,11 +40,13 @@
         </section>
 
         <section>
-            <h2>Kerja Sama dan Referensi</h2> 
-            <li><a href="https://lib.ui.ac.id/" target="_blank">Perpustakaan Universitas Indonesia</a></li>
-            <li><a href="https://library.usu.ac.id/" target="_blank">Perpustakaan Universitas Sumatera Utara</a></li>
-            <li><a href="https://lib.unri.ac.id/" target="_blank">Perpustakaan Universitas Riau</a></li>
-        </section>
+  <h2>Kerja Sama dan Referensi</h2>
+  <div class="link-box-container">
+    <a href="https://lib.ui.ac.id/" target="_blank" class="link-box">📚 Perpustakaan Universitas Indonesia</a>
+    <a href="https://library.usu.ac.id/" target="_blank" class="link-box">📚 Perpustakaan Universitas Sumatera Utara</a>
+    <a href="https://lib.unri.ac.id/" target="_blank" class="link-box">📚 Perpustakaan Universitas Riau</a>
+  </div>
+</section>
     </div>
 
 <section class="my-5">
