--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -7,6 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 </head>
 <body>
@@ -30,13 +31,23 @@
 </nav>
 
     <div class="container">
-    <h2>Ada Saran atau Pertanyaan? Hubungi Kami!</h2>
-    <p>Jika Anda ingin memberikan masukan atau menemukan sesuatu yang bisa diperbaiki, hubungi kami melalui:</p>
-    <ul>
-        <li><a href="mailto:adistyauralesmana@gmail.com">Email</a></li>
-        <li><a href="https://wa.me/6282169656152" target="_blank">Chat via WhatsApp</a></li>
-        <li><a href="https://www.instagram.com/au_rajin">Kunjungi Instagram</a></li>
-    </ul>
+   <section>
+  <h2>Ada Saran atau Pertanyaan? Hubungi Kami!</h2>
+  <p>Jika Anda ingin memberikan masukan atau menemukan sesuatu yang bisa diperbaiki, hubungi kami melalui:</p>
+
+  <div class="link-box-container">
+    <a href="mailto:adistyauralesmana@gmail.com" class="link-box" target="_blank">
+      <i class="fas fa-envelope"></i> Email
+    </a>
+    <a href="https://wa.me/6282169656152" class="link-box" target="_blank">
+      <i class="fab fa-whatsapp"></i> WhatsApp
+    </a>
+    <a href="https://www.instagram.com/au_rajin" class="link-box" target="_blank">
+      <i class="fab fa-instagram"></i> Instagram
+    </a>
+  </div>
+</section>
+
     <p>Atau, Anda dapat mengisi form di bawah ini:</p>
      <form action="https://formsubmit.co/adistyauralesmana@gmail.com" method="POST">
          <label for="nama" style="font-weight: bold;">Nama</label>
