--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -30,26 +30,10 @@
   <a href="Formulir_kunjungan.html">Formulir Kunjungan</a>
 </nav>
 
-    <div class="container">
-   <section>
+  <div class="container">
   <h2>Ada Saran atau Pertanyaan? Hubungi Kami!</h2>
-  <p>Jika Anda ingin memberikan masukan atau menemukan sesuatu yang bisa diperbaiki, hubungi kami melalui:</p>
-
-  <div class="link-box-container">
-    <a href="mailto:adistyauralesmana@gmail.com" class="link-box" target="_blank">
-      <i class="fas fa-envelope"></i> Email
-    </a>
-    <a href="https://wa.me/6282169656152" class="link-box" target="_blank">
-      <i class="fab fa-whatsapp"></i> WhatsApp
-    </a>
-    <a href="https://www.instagram.com/au_rajin" class="link-box" target="_blank">
-      <i class="fab fa-instagram"></i> Instagram
-    </a>
-  </div>
-</section>
-
-    <p>Atau, Anda dapat mengisi form di bawah ini:</p>
-     <form action="https://formsubmit.co/adistyauralesmana@gmail.com" method="POST">
+  <p>Jika Anda ingin memberikan masukan atau menemukan sesuatu yang bisa diperbaiki, Anda dapat mengisi form di bawah ini:</p>
+ <form action="https://formsubmit.co/adistyauralesmana@gmail.com" method="POST">
          <label for="nama" style="font-weight: bold;">Nama</label>
        <input type="text" name="nama" placeholder="Masukkan nama Anda">
         
@@ -62,8 +46,23 @@
         <button type="submit">Kirim</button>
     </form>
 
-    <br>
-    <a href="index.html">Kembali ke Beranda</a>
+   <section>
+    <p>Atau, Anda dapat menghubungi kami melalui:</p>
+      <div class="link-box-container">
+    <a href="mailto:adistyauralesmana@gmail.com" class="link-box" target="_blank">
+      <i class="fas fa-envelope"></i> Email
+    </a>
+    <a href="https://wa.me/6282169656152" class="link-box" target="_blank">
+      <i class="fab fa-whatsapp"></i> WhatsApp
+    </a>
+    <a href="https://www.instagram.com/au_rajin" class="link-box" target="_blank">
+      <i class="fab fa-instagram"></i> Instagram
+    </a>
+  </div>
+</section>
+    
+     <div style="margin-top: 20px;">
+  <a href="beranda.html">Kembali ke Beranda</a>
 </div>
     <footer>
         &copy; 2025 Perpustakaan Aura
