--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -64,6 +64,7 @@
      <div style="margin-top: 20px;">
   <a href="beranda.html">Kembali ke Beranda</a>
 </div>
+  </div>
     <footer>
         &copy; 2025 Perpustakaan Aura
     </footer>
