--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -46,7 +46,7 @@
         <button type="submit">Kirim</button>
     </form>
 
-   <section>
+     <section style="margin-top: 30px;">
     <p>Atau, Anda dapat menghubungi kami melalui:</p>
       <div class="link-box-container">
     <a href="mailto:adistyauralesmana@gmail.com" class="link-box" target="_blank">
