--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -43,7 +43,7 @@
          <label for="pesan" style="font-weight: bold;">Pesan</label>
        <textarea name="pesan" placeholder="Tulis Pesan Anda"></textarea>
 
-        <button type="submit">Kirim</button>
+       <button type="submit" style="margin-bottom: 20px;">Kirim</button>
     </form>
 
      <section style="margin-top: 30px;">
