--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -43,10 +43,10 @@
          <label for="pesan" style="font-weight: bold;">Pesan</label>
        <textarea name="pesan" placeholder="Tulis Pesan Anda"></textarea>
 
-       <button type="submit" style="margin-bottom: 20px;">Kirim</button>
+       <button type="submit" style="margin-top: 20px;">Kirim</button>
     </form>
 
-     <section style="margin-top: 30px;">
+     <section style="margin-top: 10px;">
     <p>Atau, Anda dapat menghubungi kami melalui:</p>
       <div class="link-box-container">
     <a href="mailto:adistyauralesmana@gmail.com" class="link-box" target="_blank">
