--- a/beranda.html
+++ b/beranda.html
@@ -24,7 +24,14 @@
   <a href="beranda.html">Beranda</a>
   <a class="nav-link" href="Tentang-saya.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Pelajari lebih lanjut tentang saya di sini">Tentang Saya</a>
   <a href="Hubungi-kami.html">Hubungi Kami</a>
-  <a href="koleksi.html">Koleksi</a>
+ <div class="dropdown">
+      <a href="koleksi.html" class="dropdown-toggle">Koleksi ▾</a>
+      <div class="dropdown-menu">
+        <a href="koleksi-pribadi.html">Koleksi Pribadi</a>
+        <a href="ebook.html">E-Book</a>
+        <a href="tugas.html">My Assignment</a>
+      </div>
+    </div>
   <a href="Tabel_Perkalian.html">Tabel Perkalian</a>
   <a href="Formulir_kunjungan.html">Formulir Kunjungan</a>
 </nav>
