--- a/beranda.html
+++ b/beranda.html
@@ -25,8 +25,8 @@
   <a class="nav-link" href="Tentang-saya.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Pelajari lebih lanjut tentang saya di sini">Tentang Saya</a>
   <a href="Hubungi-kami.html">Hubungi Kami</a>
  <div class="dropdown">
-      <a href="koleksi.html" class="dropdown-toggle">Koleksi</a>
-      <div class="dropdown-menu">
+<a href="koleksi.html" class="dropdown-toggle" onclick="toggleDropdown(event)">Koleksi</a>
+  <ul class="dropdown-menu">
         <a href="koleksi-pribadi.html">Koleksi Pribadi</a>
         <a href="ebook.html">E-Book</a>
         <a href="tugas.html">My Assignment</a>
