--- a/Tentang-saya.html
+++ b/Tentang-saya.html
@@ -7,7 +7,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 </head>
 <body>
@@ -23,9 +22,16 @@
 
 <nav class="main-nav menu-links">
   <a href="beranda.html">Beranda</a>
- <a class="nav-link" href="Tentang-saya.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Pelajari lebih lanjut tentang saya di sini">Tentang Saya</a>
+  <a class="nav-link" href="Tentang-saya.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Pelajari lebih lanjut tentang saya di sini">Tentang Saya</a>
   <a href="Hubungi-kami.html">Hubungi Kami</a>
-  <a href="koleksi.html">Koleksi</a>
+ <div class="dropdown">
+<a href="koleksi.html" class="dropdown-toggle" onclick="toggleDropdown(event)">Koleksi</a>
+  <ul class="dropdown-menu">
+        <a href="koleksi-pribadi.html">Koleksi Pribadi</a>
+        <a href="ebook.html">E-Book</a>
+        <a href="tugas.html">My Assignment</a>
+      </div>
+    </div>
   <a href="Tabel_Perkalian.html">Tabel Perkalian</a>
   <a href="Formulir_kunjungan.html">Formulir Kunjungan</a>
 </nav>
