--- a/koleksi-pribadi.html
+++ b/koleksi-pribadi.html
@@ -22,12 +22,31 @@
 
 <nav class="main-nav menu-links">
   <a href="beranda.html">Beranda</a>
- <a class="nav-link" href="Tentang-saya.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Pelajari lebih lanjut tentang saya di sini">Tentang Saya</a>
+  <a class="nav-link" href="Tentang-saya.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Pelajari lebih lanjut tentang saya di sini">Tentang Saya</a>
   <a href="Hubungi-kami.html">Hubungi Kami</a>
-  <a href="koleksi.html">Koleksi</a>
+ <div class="dropdown">
+<a href="koleksi.html" class="dropdown-toggle" onclick="toggleDropdown(event)">Koleksi</a>
+  <ul class="dropdown-menu">
+        <a href="koleksi-pribadi.html">Koleksi Pribadi</a>
+        <a href="ebook.html">E-Book</a>
+        <a href="tugas.html">My Assignment</a>
+      </div>
+    </div>
   <a href="Tabel_Perkalian.html">Tabel Perkalian</a>
   <a href="Formulir_kunjungan.html">Formulir Kunjungan</a>
 </nav>
+  
+<section class="intro-section">
+  <div class="intro-icon">
+    <img src="path/to/icon.png" alt="Icon Koleksi Pribadi">
+  </div>
+  <h2>Koleksi Pribadi</h2>
+  <p class="subtitle">PERSONAL COLLECTION</p>
+  <hr class="intro-line">
+  <p class="description">
+    Koleksi tercetak milik pribadi dari pemilik situs yang terdiri atas buku, majalah, maupun dokumen lain yang memiliki nilai referensial dan dokumentasi.
+  </p>
+</section>
 
       <div class="container">
     <section class="my-5">
