--- a/koleksi-pribadi.html
+++ b/koleksi-pribadi.html
@@ -38,7 +38,7 @@
   
 <section class="intro-section">
   <div class="intro-icon">
-    <img src="path/to/icon.png" alt="Icon Koleksi Pribadi">
+    <img src="https://cdn-icons-png.flaticon.com/512/29/29302.png" alt="Logo Buku">
   </div>
   <h2>Koleksi Pribadi</h2>
   <p class="subtitle">PERSONAL COLLECTION</p>
