--- a/index.html
+++ b/index.html
@@ -84,12 +84,14 @@
 </head>
 <body>
   <div class="container">
-    <div class="logo">📚</div>
+    <div class="logo">
+  <img src="https://cdn-icons-png.flaticon.com/512/29/29302.png" alt="Logo Buku" style="width: 60px; height: auto;">
+</div>
     <h1>Selamat Datang di Perpustakaan Aura</h1>
     <div class="loading-bar">
       <div class="loading-fill"></div>
     </div>
-    <p class="quote">"Membaca adalah jendela dunia."</p>
+    <p class="quote">"Setiap lembar buku adalah cahaya pengetahuan."</p>
   </div>
 </body>
 </html>
