--- a/ebook.html
+++ b/ebook.html
@@ -44,6 +44,6 @@
   <p class="subtitle">EBOOK</p>
   <hr class="intro-line">
   <p class="description">
-    BUku elektronik yang dapat diakses dan diunduh secara gratis.
+    Kumpulan buku elektronik yang dapat diakses dan diunduh secara gratis.
   </p>
 </section>
