--- a/koleksi-pribadi.html
+++ b/koleksi-pribadi.html
@@ -44,7 +44,7 @@
   <p class="subtitle">PERSONAL COLLECTION</p>
   <hr class="intro-line">
   <p class="description">
-    Koleksi tercetak milik pribadi dari pemilik situs yang terdiri atas buku, majalah, maupun dokumen lain yang memiliki nilai referensial dan dokumentasi.
+    Koleksi tercetak milik pribadi dari pemilik situs yang terdiri atas buku, novel, maupun dokumen lain.
   </p>
 </section>
 
