--- a/tugas.html
+++ b/tugas.html
@@ -29,7 +29,7 @@
   <ul class="dropdown-menu">
         <a href="koleksi-pribadi.html">Koleksi Pribadi</a>
         <a href="ebook.html">E-Book</a>
-        <a href="tugas.html">My Assignment</a>
+        <a href="tugas.html">Dokumentasi Tugas</a>
       </div>
     </div>
   <a href="Tabel_Perkalian.html">Tabel Perkalian</a>
