--- a/tugas.html
+++ b/tugas.html
@@ -7,6 +7,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
 
 </head>
 <body>
@@ -47,3 +49,40 @@
     Dokumentasi tugas-tugas dalam rangka memenuhi persyaratan akademik di program studi Perpustakaan dan Sains Informasi, yang dapat digunakan sebagai bahan rujukan.
   </p>
 </section>
+
+  <div class="swiper mySwiper">
+  <div class="swiper-wrapper">
+    <!-- Slide 1 -->
+    <div class="swiper-slide">
+      <div class="grid-container">
+        <a href="https://drive.google.com/file/d/1YaV-umMNWHGA23lLI8BuKqUGN847zTV6/view?usp=drive_link" target="_blank" class="box">Evaluasi Website Perpustakaan</a>
+        <a href="https://drive.google.com/your-link2" target="_blank" class="box">Website Perpustakaan</a>
+        <a href="https://drive.google.com/your-link3" target="_blank" class="box">Makalah Akademik</a>
+        <a href="https://drive.google.com/your-link4" target="_blank" class="box">Implementasi SLiMS</a>
+        <a href="https://drive.google.com/your-link5" target="_blank" class="box">Infografis</a>
+        <a href="https://drive.google.com/your-link6" target="_blank" class="box">Video Edukasi</a>
+      </div>
+    </div>
+
+    <!-- Slide 2 -->
+    <div class="swiper-slide">
+      <div class="grid-container">
+        <a href="https://drive.google.com/your-link7" target="_blank" class="box">Tugas Klasifikasi</a>
+        <a href="https://drive.google.com/your-link8" target="_blank" class="box">Poster Layanan</a>
+        <a href="https://drive.google.com/your-link9" target="_blank" class="box">Publikasi Buku</a>
+        <!-- Kosongkan tiga box jika hanya tiga item -->
+        <div class="box empty"></div>
+        <div class="box empty"></div>
+        <div class="box empty"></div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Navigasi -->
+  <div class="swiper-button-next"></div>
+  <div class="swiper-button-prev"></div>
+</div>
+
+  <!-- Swiper JS -->
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
