--- a/tugas.html
+++ b/tugas.html
@@ -67,13 +67,12 @@
     <!-- Slide 2 -->
     <div class="swiper-slide">
       <div class="grid-container">
-        <a href="https://drive.google.com/your-link7" target="_blank" class="box">Tugas Klasifikasi</a>
-        <a href="https://drive.google.com/your-link8" target="_blank" class="box">Poster Layanan</a>
-        <a href="https://drive.google.com/your-link9" target="_blank" class="box">Publikasi Buku</a>
-        <!-- Kosongkan tiga box jika hanya tiga item -->
-        <div class="box empty"></div>
-        <div class="box empty"></div>
-        <div class="box empty"></div>
+         <a href="https://drive.google.com/file/d/1YaV-umMNWHGA23lLI8BuKqUGN847zTV6/view?usp=drive_link" target="_blank" class="box">Evaluasi Website Perpustakaan</a>
+        <a href="https://drive.google.com/your-link2" target="_blank" class="box">Website Perpustakaan</a>
+        <a href="https://drive.google.com/your-link3" target="_blank" class="box">Makalah Akademik</a>
+        <a href="https://drive.google.com/your-link4" target="_blank" class="box">Implementasi SLiMS</a>
+        <a href="https://drive.google.com/your-link5" target="_blank" class="box">Infografis</a>
+        <a href="https://drive.google.com/your-link6" target="_blank" class="box">Video Edukasi</a>
       </div>
     </div>
   </div>
