--- a/ebook.html
+++ b/ebook.html
@@ -47,3 +47,13 @@
     Kumpulan buku elektronik yang dapat diakses dan diunduh secara gratis.
   </p>
 </section>
+
+   <footer>
+        &copy; 2025 Perpustakaan Aura
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="script.js"></script>
+
+</body>
+</html>
