--- a/tugas.html
+++ b/tugas.html
@@ -56,9 +56,9 @@
     <div class="swiper-slide">
       <div class="grid-container">
         <a href="https://drive.google.com/file/d/1YaV-umMNWHGA23lLI8BuKqUGN847zTV6/view?usp=drive_link" target="_blank" class="box">Evaluasi Website Perpustakaan</a>
-        <a href="https://drive.google.com/your-link2" target="_blank" class="box">Website Perpustakaan</a>
-        <a href="https://drive.google.com/your-link3" target="_blank" class="box">Makalah Akademik</a>
-        <a href="https://drive.google.com/your-link4" target="_blank" class="box">Implementasi SLiMS</a>
+        <a href="https://drive.google.com/your-link2" target="_blank" class="box">Perkalian PHP</a>
+        <a href="https://drive.google.com/your-link3" target="_blank" class="box">Formulir Kunjungan PHP</a>
+        <a href="https://drive.google.com/your-link4" target="_blank" class="box">Review Jurnal</a>
         <a href="https://drive.google.com/your-link5" target="_blank" class="box">Infografis</a>
         <a href="https://drive.google.com/your-link6" target="_blank" class="box">Video Edukasi</a>
       </div>
