--- a/ebook.html
+++ b/ebook.html
@@ -56,10 +56,10 @@
                 <div class="card" style="width: 18rem;">
                     <img src="gambar/MOTS 7.jpg" class="card-img-top" alt="Map of The Soul 7: Persona, Shadow, & Ego dalam Dunia BTS">
                     <div class="card-body">
-                        <h5 class="card-title" style="color: #9966CC; font-weight: bold;">Map of The Soul 7: Persona, Shadow, & Ego dalam Dunia BTS</h5>
+                        <h5 class="card-title" style="color: #9966CC; font-weight: bold;">The Internationalization of the Academic Library</h5>
                         <p class="card-text">Buku Map of the Soul 7: Persona, Shadow & Ego in the World of BTS ditulis oleh Murray Stein, seorang penulis buku tentang kejiwaan manusia yang berpusat pada pendekatan psikoanaisis Carl Gustav Jung. 
                             Buku Map of the Soul 7 ini merupakan buku terakhir dari buku seri Map of the Soul. Buku ini melengkapi buku seri sebelumnya, yakni Jung’s Map of the Soul: An Introduction, dan Map of the Soul: Persona.</p>
-                        <a href="https://online.fliphtml5.com/xcvum/wmms/" target="_blank" class="btn-baca">baca</a>
+                        <a href="https://drive.google.com/file/d/1hX8Ttc2ZKYqaJ1ZHDNKk1e4-K2Y10DHn/view?usp=sharing" target="_blank" class="btn-baca">baca</a>
                     </div>
                 </div>
             </div>
@@ -68,10 +68,10 @@
                 <div class="card" style="width: 18rem;">
                         <img src="gambar/gambar buku 2.webp" class="card-img-top" alt="Siapa yang Datang ke Pemakamanku Saat Aku Mati Nanti?">
                         <div class="card-body">
-                            <h5 class="card-title" style="color: #9966CC; font-weight: bold;">Siapa yang Datang ke Pemakamanku Saat Aku Mati Nanti?</h5>
+                            <h5 class="card-title" style="color: #9966CC; font-weight: bold;">The Psychology of Fake News</h5>
                             <p class="card-text">Tulisan-tulisan ini memiliki keterkaitan dengan keseharian seseorang, sehingga pembaca bisa merasa terhubung dengan buku ini.
                                 Beberapa topik yang dibahas di dalam buku ini misalnya mengenai kesalahan dalam hidup, keegoisan, sifat baik terhadap sesama, rasa gugup, mimpi, penilaian terhadap orang lain, dan terakhir, mengenai apa itu definisi kebaikan menurut sang penulis.</p>
-                            <a href="https://online.fliphtml5.com/xcvum/ppqg/" target="_blank" class="btn-baca">baca</a>
+                            <a href="https://drive.google.com/file/d/1uwFpYUnwTPYTPvLGuNh4DRuiJNUPlBZh/view?usp=sharing" target="_blank" class="btn-baca">baca</a>
                         </div>
                     </div>
                 </div>
