--- a/ebook.html
+++ b/ebook.html
@@ -54,11 +54,10 @@
             <!-- Kolom pertama -->
             <div class="col-md-4 d-flex justify-content-center">
                 <div class="card" style="width: 18rem;">
-                    <img src="gambar/MOTS 7.jpg" class="card-img-top" alt="Map of The Soul 7: Persona, Shadow, & Ego dalam Dunia BTS">
+                    <img src="gambar/ebook.webp" class="card-img-top" alt="The Internationalization of the Academic Library">
                     <div class="card-body">
                         <h5 class="card-title" style="color: #9966CC; font-weight: bold;">The Internationalization of the Academic Library</h5>
-                        <p class="card-text">Buku Map of the Soul 7: Persona, Shadow & Ego in the World of BTS ditulis oleh Murray Stein, seorang penulis buku tentang kejiwaan manusia yang berpusat pada pendekatan psikoanaisis Carl Gustav Jung. 
-                            Buku Map of the Soul 7 ini merupakan buku terakhir dari buku seri Map of the Soul. Buku ini melengkapi buku seri sebelumnya, yakni Jung’s Map of the Soul: An Introduction, dan Map of the Soul: Persona.</p>
+                        <p class="card-text">The Internationalization of the Academic Library presents a theoretically informed, empirically grounded analysis of the process of academic library internationalization.</p>
                         <a href="https://drive.google.com/file/d/1hX8Ttc2ZKYqaJ1ZHDNKk1e4-K2Y10DHn/view?usp=sharing" target="_blank" class="btn-baca">baca</a>
                     </div>
                 </div>
@@ -66,11 +65,12 @@
                
                 <div class="col-md-4 d-flex justify-content-center">
                 <div class="card" style="width: 18rem;">
-                        <img src="gambar/gambar buku 2.webp" class="card-img-top" alt="Siapa yang Datang ke Pemakamanku Saat Aku Mati Nanti?">
+                        <img src="gambar/ebook2.jpg" class="card-img-top" alt="The Psychology of Fake News">
                         <div class="card-body">
-                            <h5 class="card-title" style="color: #9966CC; font-weight: bold;">The Psychology of Fake News</h5>
-                            <p class="card-text">Tulisan-tulisan ini memiliki keterkaitan dengan keseharian seseorang, sehingga pembaca bisa merasa terhubung dengan buku ini.
-                                Beberapa topik yang dibahas di dalam buku ini misalnya mengenai kesalahan dalam hidup, keegoisan, sifat baik terhadap sesama, rasa gugup, mimpi, penilaian terhadap orang lain, dan terakhir, mengenai apa itu definisi kebaikan menurut sang penulis.</p>
+                            <h5 class="card-title" style="color: #9966CC; font-weight: bold;">The Psychology of Fake News: Accepting, Sharing, and Correcting Misinformation</h5>
+                            <p class="card-text">This volume examines the phenomenon of fake news by bringing together leading
+experts from different fields within psychology and related areas, and explores what has
+become a prominent feature of public discourse.</p>
                             <a href="https://drive.google.com/file/d/1uwFpYUnwTPYTPvLGuNh4DRuiJNUPlBZh/view?usp=sharing" target="_blank" class="btn-baca">baca</a>
                         </div>
                     </div>
