--- a/ebook.html
+++ b/ebook.html
@@ -54,7 +54,7 @@
             <!-- Kolom pertama -->
             <div class="col-md-4 d-flex justify-content-center">
                 <div class="card" style="width: 18rem;">
-                    <img src="gambar/ebook.webp" class="card-img-top" alt="The Internationalization of the Academic Library">
+                    <img src="gambar/ebook1.webp" class="card-img-top" alt="The Internationalization of the Academic Library">
                     <div class="card-body">
                         <h5 class="card-title" style="color: #9966CC; font-weight: bold;">The Internationalization of the Academic Library</h5>
                         <p class="card-text">The Internationalization of the Academic Library presents a theoretically informed, empirically grounded analysis of the process of academic library internationalization.</p>
