--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -41,7 +41,7 @@
   <div class="container">
   <h2>Ada Saran atau Pertanyaan? Hubungi Kami!</h2>
   <p>Jika Anda ingin memberikan masukan atau menemukan sesuatu yang bisa diperbaiki, Anda dapat mengisi form di bawah ini:</p>
- <form action="adistyauralesmana@gmail.com" method="POST">
+ <form action="https://formsubmit.co/adistyauralesmana@gmail.com" method="POST">
          <label for="nama" style="font-weight: bold;">Nama</label>
        <input type="text" name="nama" placeholder="Masukkan nama Anda">
         
