--- a/beranda.html
+++ b/beranda.html
@@ -35,6 +35,16 @@
   <a href="Tabel_Perkalian.html">Tabel Perkalian</a>
   <a href="Formulir_kunjungan.html">Formulir Kunjungan</a>
 </nav>
+
+<section class="my-5">
+  <h2>Halo Pengunjung!</h2>
+  <p id="welcomeMessage"></p>
+  <form onsubmit="setUserName(); return false;" class="mb-3">
+    <label for="username">Masukkan nama kamu:</label>
+    <input type="text" id="username" class="form-control w-50" required>
+    <button type="submit" class="btn btn-primary mt-2">Simpan Nama</button>
+  </form>
+</section>
   
     <div class="container">
         <section>
